Dodanie komentarzy oraz przycisku opcji

--- a/css/style_p5.css
+++ b/css/style_p5.css
@@ -5,11 +5,22 @@ body{
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: white;
 }
 canvas{
   background-color: gray;
   border-top: solid 5px;
   border-bottom: solid 5px;
   border-radius: 20px;
+}
+#a1{
+  font-size: 35px;
+  cursor: pointer;
+  background-color: gray;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-left: solid black;
+}
+#options{
+  background-color: orange;
+  display: none;
 }
