--- a/css/style_p5.css
+++ b/css/style_p5.css
@@ -19,8 +19,25 @@ canvas{
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   border-left: solid black;
+  style: none;
+  transition: .3s;
+}
+a:hover{
+  padding-right: 10px;
+  color: chocolate;
+
 }
 #options{
-  background-color: orange;
+  background-color: cyan;
+  display: none;
+  transition: .5s;
+  border: dashed 5px crimson;
+  border-radius: 10px;
+  padding: 10px;
+}
+button{
+  margin: 2px;
+}
+audio{
   display: none;
 }
